--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <!-- Navbar -->
   <header>
     <nav class="navbar">
-      <div class="brand">John<span>Doe</span></div>
+      <div class="brand">Ameed<span>Shubietah</span></div>
       <div class="toggle" id="mobile-menu">
         <span class="bar"></span>
         <span class="bar"></span>
@@ -44,7 +44,7 @@
   <!-- Hero -->
   <section id="home" class="hero">
     <div class="hero-content">
-      <h1>Hi, I'm John Doe</h1>
+      <h1>Hi, I'm Ameed Shubietah</h1>
       <p class="typed"></p>
       <a href="#portfolio" class="btn">View My Work</a>
     </div>
@@ -55,9 +55,11 @@
     <h2 class="section-title">About Me</h2>
     <div class="section-content">
       <p>
-        I'm a Full-Stack Developer with a passion for building beautiful,
-        performant and accessible web experiences. I love turning ideas
-        into reality using HTML, CSS, JavaScript—and a sprinkle of creativity.
+        I'm an Odoo Developer with 2 years of hands‑on experience building and customising modules in Odoo. Solid
+        foundation in Python, PostgreSQL and REST API integrations. Delivered three freelance projects that
+        automated CRM, Sales and Inventory workflows for SMEs, cutting manual data entry by up to 25 %.
+        Quick‑learning, detail‑oriented and an active contributor on Odoo Community forums. Fluent in Arabic &
+        English; open to both remote and on‑premise jobs.
       </p>
     </div>
   </section>
