--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>John Doe | Portfolio</title>
+  <title>Ameed Shubietah | Portfolio</title>
 
   <!-- Google Font + Font Awesome -->
   <link rel="preconnect" href="https://fonts.googleapis.com"/>
