--- a/index.html
+++ b/index.html
@@ -103,8 +103,12 @@
         <div class="progress"><span class="progress-bar" data-width="85%"></span></div>
       </div>
       <div class="skill">
-        <h3>Node.js</h3>
-        <div class="progress"><span class="progress-bar" data-width="80%"></span></div>
+        <h3>Python</h3>
+        <div class="progress"><span class="progress-bar" data-width="90%"></span></div>
+      </div>
+      <div class="skill">
+        <h3>Odoo</h3>
+        <div class="progress"><span class="progress-bar" data-width="95%"></span></div>
       </div>
     </div>
   </section>
