--- a/index.html
+++ b/index.html
@@ -113,28 +113,24 @@
     </div>
   </section>
 
-  <!-- Portfolio -->
   <section id="portfolio" class="section">
     <h2 class="section-title">Portfolio</h2>
     <div class="portfolio-container">
-      <div class="project">
-        <img src="images/project1.jpg" alt="Project 1">
+      <a href="project1.html" class="project">
+        <img src="images/project1-thumb.jpg" alt="Project One">
         <h3>Project One</h3>
         <p>Single-page app with smooth animations.</p>
-        <a href="#" class="btn">Live Demo</a>
-      </div>
-      <div class="project">
-        <img src="images/project2.jpg" alt="Project 2">
+      </a>
+      <a href="project2.html" class="project">
+        <img src="images/project2-thumb.jpg" alt="Project Two">
         <h3>Project Two</h3>
         <p>Interactive dashboard with charts & graphs.</p>
-        <a href="#" class="btn">Live Demo</a>
-      </div>
-      <div class="project">
-        <img src="images/project3.jpg" alt="Project 3">
+      </a>
+      <a href="project3.html" class="project">
+        <img src="images/project3-thumb.jpg" alt="Project Three">
         <h3>Project Three</h3>
         <p>E-commerce site with shopping cart.</p>
-        <a href="#" class="btn">Live Demo</a>
-      </div>
+      </a>
     </div>
   </section>
 
@@ -151,7 +147,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2025 John Doe. All rights reserved.</p>
+    <p>&copy; 2025 Ameed Shubietah. All rights reserved.</p>
   </footer>
 
   <!-- Typed.js (for typing effect) -->
