--- a/index.html
+++ b/index.html
@@ -114,25 +114,29 @@
   </section>
 
   <section id="portfolio" class="section">
-    <h2 class="section-title">Portfolio</h2>
-    <div class="portfolio-container">
-      <a href="project1.html" class="project">
-        <img src="images/project1-thumb.jpg" alt="Project One">
-        <h3>Project One</h3>
-        <p>Single-page app with smooth animations.</p>
-      </a>
-      <a href="project2.html" class="project">
-        <img src="images/project2-thumb.jpg" alt="Project Two">
-        <h3>Project Two</h3>
-        <p>Interactive dashboard with charts & graphs.</p>
-      </a>
-      <a href="project3.html" class="project">
-        <img src="images/project3-thumb.jpg" alt="Project Three">
-        <h3>Project Three</h3>
-        <p>E-commerce site with shopping cart.</p>
-      </a>
+  <h2 class="section-title">Portfolio</h2>
+  <div class="portfolio-container">
+    <div class="project">
+      <img src="images/project1.jpg" alt="Project One">
+      <h3>Project One</h3>
+      <p>Single-page app with smooth animations.</p>
+      <a href="project1.html" class="btn">View Details</a>
     </div>
-  </section>
+    <div class="project">
+      <img src="images/project2.jpg" alt="Project Two">
+      <h3>Project Two</h3>
+      <p>Interactive dashboard with charts & graphs.</p>
+      <a href="project2.html" class="btn">View Details</a>
+    </div>
+    <div class="project">
+      <img src="images/project3.jpg" alt="Project Three">
+      <h3>Project Three</h3>
+      <p>E-commerce site with shopping cart.</p>
+      <a href="project3.html" class="btn">View Details</a>
+    </div>
+  </div>
+</section>
+
 
   <!-- Contact -->
   <section id="contact" class="section">
