--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
   <h2 class="section-title">Portfolio</h2>
   <div class="portfolio-container">
     <div class="project">
-      <img src="images/project1.jpg" alt="Project One">
+      <img src="images/11.jpg" alt="Project One">
       <h3>Project One</h3>
       <p>Single-page app with smooth animations.</p>
       <a href="project1.html" class="btn">View Details</a>
