--- a/index.html
+++ b/index.html
@@ -118,19 +118,19 @@
   <div class="portfolio-container">
     <div class="project">
       <img src="images/11.jpg" alt="Project One">
-      <h3>Project One</h3>
+      <h3>Food Delivery</h3>
       <p>Single-page app with smooth animations.</p>
       <a href="project1.html" class="btn">View Details</a>
     </div>
     <div class="project">
       <img src="images/project2.jpg" alt="Project Two">
-      <h3>Project Two</h3>
+      <h3>Recruitment Platform</h3>
       <p>Interactive dashboard with charts & graphs.</p>
       <a href="project2.html" class="btn">View Details</a>
     </div>
     <div class="project">
       <img src="images/project3.jpg" alt="Project Three">
-      <h3>Project Three</h3>
+      <h3>Sanbot - API</h3>
       <p>E-commerce site with shopping cart.</p>
       <a href="project3.html" class="btn">View Details</a>
     </div>
