--- a/index.html
+++ b/index.html
@@ -117,19 +117,19 @@
   <h2 class="section-title">Portfolio</h2>
   <div class="portfolio-container">
     <div class="project">
-      <img src="images/11.jpg" alt="Project One">
+      <img src="images/delivery platform dashboard.jpeg" alt="Project One">
       <h3>Food Delivery</h3>
       <p>Single-page app with smooth animations.</p>
       <a href="project1.html" class="btn">View Details</a>
     </div>
     <div class="project">
-      <img src="images/project2.jpg" alt="Project Two">
+      <img src="images/recruitment platform landing page.jpeg" alt="Project Two">
       <h3>Recruitment Platform</h3>
       <p>Interactive dashboard with charts & graphs.</p>
       <a href="project2.html" class="btn">View Details</a>
     </div>
     <div class="project">
-      <img src="images/project3.jpg" alt="Project Three">
+      <img src="images/sanbot.jpeg" alt="Project Three">
       <h3>Sanbot - API</h3>
       <p>E-commerce site with shopping cart.</p>
       <a href="project3.html" class="btn">View Details</a>
