--- a/index.html
+++ b/index.html
@@ -52,17 +52,26 @@
 
   <!-- About -->
   <section id="about" class="section">
-    <h2 class="section-title">About Me</h2>
-    <div class="section-content">
+  <h2 class="section-title">About Me</h2>
+  <div class="about-container">
+    <div class="about-img">
+      <img src="images/profile.jpg" alt="Ameed Shubietah">
+    </div>
+    <div class="about-text">
       <p>
-        I'm an Odoo Developer with 2 years of hands‑on experience building and customising modules in Odoo. Solid
-        foundation in Python, PostgreSQL and REST API integrations. Delivered three freelance projects that
-        automated CRM, Sales and Inventory workflows for SMEs, cutting manual data entry by up to 25 %.
-        Quick‑learning, detail‑oriented and an active contributor on Odoo Community forums. Fluent in Arabic &
-        English; open to both remote and on‑premise jobs.
+        I’m <strong>Ameed Shubietah</strong>, an Odoo Developer with 2 years of
+        hands-on experience building and customising modules in Odoo. I have
+        a solid foundation in Python, PostgreSQL and REST API integrations.
+      </p>
+      <p>
+        I’ve delivered freelance projects automating CRM, Sales and Inventory
+        workflows for SMEs—cutting manual data entry by up to 25 %. I’m a quick
+        learner, detail-oriented, active on Odoo Community forums, and fluent
+        in Arabic & English.
       </p>
     </div>
-  </section>
+  </div>
+</section>
 
   <!-- Services -->
   <section id="services" class="section">
