--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <h2 class="section-title">About Me</h2>
   <div class="about-container">
     <div class="about-img">
-      <img src="images/profile.jpg" alt="Ameed Shubietah">
+      <img src="Images/profile.jpg" alt="Ameed Shubietah">
     </div>
     <div class="about-text">
       <p>
