--- a/index.html
+++ b/index.html
@@ -55,17 +55,8 @@
   <h2 class="section-title">About Me</h2>
   <div class="about-container">
     <div class="about-text">
-      <p>
-        I’m <strong>Ameed Shubietah</strong>, an Odoo Developer with 2 years of
-        hands-on experience building and customising modules in Odoo. I have
-        a solid foundation in Python, PostgreSQL and REST API integrations.
-      </p>
-      <p>
-        I’ve delivered freelance projects automating CRM, Sales and Inventory
-        workflows for SMEs—cutting manual data entry by up to 25 %. I’m a quick
-        learner, detail-oriented, active on Odoo Community forums, and fluent
-        in Arabic & English.
-      </p>
+      <!-- this empty span is where Typed.js will inject your bio -->
+      <span class="about-typed"></span>
     </div>
   </div>
 </section>
