--- a/index.html
+++ b/index.html
@@ -43,19 +43,22 @@
 
   <!-- Hero -->
   <section id="home" class="hero">
-  <div class="hero-content">
-    <h1>Ameed Shubietah</h1>
-    <h2 class="hero-sub">I’m a <span class="typed"></span></h2>
-    <p class="hero-bio">
-      Odoo Developer with 2 years of experience building and customizing Odoo modules.
-      Skilled in Python, PostgreSQL & REST APIs. Freelance work cut data entry by 25%.
-    </p>
-    <a href="#portfolio" class="btn">View My Work</a>
-  </div>
-  <div class="hero-img">
-    <img src="images/profile.jpg" alt="Ameed Shubietah">
+  <div class="hero-container">
+    <div class="hero-text">
+      <h1>Ameed Shubietah</h1>
+      <h2 class="hero-sub">I’m a <span class="typed"></span></h2>
+      <p class="hero-bio">
+        Odoo Developer with 2 years’ experience building and customizing Odoo modules.
+        Skilled in Python, PostgreSQL & REST APIs. Freelance work cut manual data entry by 25%.
+      </p>
+      <a href="#portfolio" class="btn">View My Work</a>
+    </div>
+    <div class="hero-img">
+      <img src="images/profile.jpg" alt="Ameed Shubietah">
+    </div>
   </div>
 </section>
+
 
 
   <!-- About -->
