--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <a href="#portfolio" class="btn">View My Work</a>
     </div>
     <div class="hero-img">
-      <img src="Images/profile.jpg" alt="Ameed Shubietah">
+      <img src="Images/profile.png" alt="Ameed Shubietah">
     </div>
   </div>
 </section>
