--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
       <h1>Ameed Shubietah</h1>
       <h2 class="hero-sub">I’m a <span class="typed"></span></h2>
       <p class="hero-bio">
-        Odoo Developer with 2 years’ experience building and customizing Odoo modules.
-        Skilled in Python, PostgreSQL & REST APIs. Freelance work cut manual data entry by 25%.
+        Odoo Developer with 2 years of hands-on experience building and customising modules in Odoo. Solid foundation in Python, PostgreSQL and REST API integrations. Delivered three freelance projects that automated CRM, Sales and Inventory workflows for SMEs, cutting manual data entry by up to 25%. Quick-learning, detail-oriented and an active contributor on Odoo Community forums. Fluent in Arabic & English; open to both remote and on-premise jobs.|
       </p>
       <a href="#portfolio" class="btn">View My Work</a>
     </div>
