--- a/index.html
+++ b/index.html
@@ -76,6 +76,21 @@
         <h3>API Integration</h3>
         <p>Connect your apps to any service with robust REST APIs.</p>
       </div>
+      <div class="service">
+        <i class="fas fa-server"></i>
+        <h3>API Integration</h3>
+        <p>Connect your apps to any service with robust REST APIs.</p>
+      </div>
+      <div class="service">
+        <i class="fas fa-server"></i>
+        <h3>API Integration</h3>
+        <p>Connect your apps to any service with robust REST APIs.</p>
+      </div>
+      <div class="service">
+        <i class="fas fa-server"></i>
+        <h3>API Integration</h3>
+        <p>Connect your apps to any service with robust REST APIs.</p>
+      </div>
     </div>
   </section>
 
