--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
         <h3>API Integration</h3>
         <p>Connect your apps to any service with robust REST APIs.</p>
       </div>
+    </div>
+    <div class="services-container">
       <div class="service">
         <i class="fas fa-server"></i>
         <h3>API Integration</h3>
