--- a/index.html
+++ b/index.html
@@ -57,44 +57,44 @@
   </div>
 </section>
 
-  <!-- Services -->
   <section id="services" class="section">
-    <h2 class="section-title">Services</h2>
-    <div class="services-container">
-      <div class="service">
-        <i class="fas fa-code"></i>
-        <h3>Web Development</h3>
-        <p>Custom websites and web apps tailored to your needs.</p>
-      </div>
-      <div class="service">
-        <i class="fas fa-paint-brush"></i>
-        <h3>UI/UX Design</h3>
-        <p>Clean, user-friendly interfaces that engage & delight.</p>
-      </div>
-      <div class="service">
-        <i class="fas fa-server"></i>
-        <h3>API Integration</h3>
-        <p>Connect your apps to any service with robust REST APIs.</p>
-      </div>
+  <h2 class="section-title">Services</h2>
+  <div class="services-container">
+    <!-- ORIGINAL THREE -->
+    <div class="service">
+      <i class="fas fa-code"></i>
+      <h3>Web Development</h3>
+      <p>Custom websites and web apps tailored to your needs.</p>
     </div>
-    <div class="services-container">
-      <div class="service">
-        <i class="fas fa-server"></i>
-        <h3>API Integration</h3>
-        <p>Connect your apps to any service with robust REST APIs.</p>
-      </div>
-      <div class="service">
-        <i class="fas fa-server"></i>
-        <h3>API Integration</h3>
-        <p>Connect your apps to any service with robust REST APIs.</p>
-      </div>
-      <div class="service">
-        <i class="fas fa-server"></i>
-        <h3>API Integration</h3>
-        <p>Connect your apps to any service with robust REST APIs.</p>
-      </div>
+    <div class="service">
+      <i class="fas fa-paint-brush"></i>
+      <h3>UI/UX Design</h3>
+      <p>Clean, user-friendly interfaces that engage & delight.</p>
     </div>
-  </section>
+    <div class="service">
+      <i class="fas fa-server"></i>
+      <h3>API Integration</h3>
+      <p>Connect your apps to any service with robust REST APIs.</p>
+    </div>
+
+    <!-- DUPLICATED THREE (will wrap to 2nd row) -->
+    <div class="service">
+      <i class="fas fa-code"></i>
+      <h3>Web Development</h3>
+      <p>Custom websites and web apps tailored to your needs.</p>
+    </div>
+    <div class="service">
+      <i class="fas fa-paint-brush"></i>
+      <h3>UI/UX Design</h3>
+      <p>Clean, user-friendly interfaces that engage & delight.</p>
+    </div>
+    <div class="service">
+      <i class="fas fa-server"></i>
+      <h3>API Integration</h3>
+      <p>Connect your apps to any service with robust REST APIs.</p>
+    </div>
+  </div>
+</section>
 
   <!-- Skills -->
   <section id="skills" class="section">
