--- a/index.html
+++ b/index.html
@@ -65,16 +65,19 @@
       <i class="fas fa-code"></i>
       <h3>Web Development</h3>
       <p>Custom websites and web apps tailored to your needs.</p>
+       <i class="fas fa-arrow-right arrow"></i>
     </div>
     <div class="service">
       <i class="fas fa-paint-brush"></i>
       <h3>UI/UX Design</h3>
       <p>Clean, user-friendly interfaces that engage & delight.</p>
+       <i class="fas fa-arrow-right arrow"></i>
     </div>
     <div class="service">
       <i class="fas fa-server"></i>
       <h3>API Integration</h3>
       <p>Connect your apps to any service with robust REST APIs.</p>
+       <i class="fas fa-arrow-right arrow"></i>
     </div>
 
     <!-- DUPLICATED THREE (will wrap to 2nd row) -->
@@ -82,16 +85,19 @@
       <i class="fas fa-code"></i>
       <h3>Web Development</h3>
       <p>Custom websites and web apps tailored to your needs.</p>
+       <i class="fas fa-arrow-right arrow"></i>
     </div>
     <div class="service">
       <i class="fas fa-paint-brush"></i>
       <h3>UI/UX Design</h3>
       <p>Clean, user-friendly interfaces that engage & delight.</p>
+       <i class="fas fa-arrow-right arrow"></i>
     </div>
     <div class="service">
       <i class="fas fa-server"></i>
       <h3>API Integration</h3>
       <p>Connect your apps to any service with robust REST APIs.</p>
+       <i class="fas fa-arrow-right arrow"></i>
     </div>
   </div>
 </section>
