--- a/index.html
+++ b/index.html
@@ -49,7 +49,20 @@
       <p class="hero-bio">
         Odoo Developer with 2 years of hands-on experience building and customising modules in Odoo. Solid foundation in Python, PostgreSQL and REST API integrations. Delivered three freelance projects that automated CRM, Sales and Inventory workflows for SMEs, cutting manual data entry by up to 25%. Quick-learning, detail-oriented and an active contributor on Odoo Community forums. Fluent in Arabic & English; open to both remote and on-premise jobs.
       </p>
-      <a href="#portfolio" class="btn">View My Work</a>
+      <div class="hero-cta">
+  <a href="path/to/your-cv.pdf" class="btn" download>Download CV</a>
+  <div class="social-icons">
+    <a href="https://discord.gg/your-link" target="_blank" aria-label="Discord">
+      <i class="fab fa-discord"></i>
+    </a>
+    <a href="https://wa.me/your-number" target="_blank" aria-label="WhatsApp">
+      <i class="fab fa-whatsapp"></i>
+    </a>
+    <a href="https://www.linkedin.com/in/your-profile" target="_blank" aria-label="LinkedIn">
+      <i class="fab fa-linkedin"></i>
+    </a>
+  </div>
+</div>
     </div>
     <div class="hero-img">
       <img src="Images/profile.png" alt="Ameed Shubietah">
