--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <div class="hero-cta">
   <a href="path/to/your-cv.pdf" class="btn" download>Download CV</a>
   <div class="social-icons">
-    <a href="https://discord.gg/your-link" target="_blank" aria-label="Discord">
+    <a href="discord://-/users/aboro3b" target="_blank" aria-label="Discord">
       <i class="fab fa-discord"></i>
     </a>
     <a href="https://wa.me/your-number" target="_blank" aria-label="WhatsApp">
