--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
       <div class="hero-cta">
   <a href="Ameed Shubietah - Resume.pdf" class="btn" download>Download CV</a>
   <div class="social-icons">
-    <a href="discord://-/users/aboro3b" target="_blank" aria-label="Discord">
+    <a href="https://discord.gg/aM4Uadz9" target="_blank" aria-label="Discord">
       <i class="fab fa-discord"></i>
     </a>
-    <a href="https://wa.me/00972595820527" target="_blank" aria-label="WhatsApp">
+    <a href="https://wa.me/00970595820527" target="_blank" aria-label="WhatsApp">
       <i class="fab fa-whatsapp"></i>
     </a>
     <a href="https://www.linkedin.com/in/ameed-shubietah-92b473315/" target="_blank" aria-label="LinkedIn">
