--- a/index.html
+++ b/index.html
@@ -133,30 +133,16 @@
 
   <!-- Skills -->
   <section id="skills" class="section">
-    <h2 class="section-title">Skills</h2>
-    <div class="skills-container">
-      <div class="skill">
-        <h3>HTML</h3>
-        <div class="progress"><span class="progress-bar" data-width="95%"></span></div>
-      </div>
-      <div class="skill">
-        <h3>CSS</h3>
-        <div class="progress"><span class="progress-bar" data-width="90%"></span></div>
-      </div>
-      <div class="skill">
-        <h3>JavaScript</h3>
-        <div class="progress"><span class="progress-bar" data-width="85%"></span></div>
-      </div>
-      <div class="skill">
-        <h3>Python</h3>
-        <div class="progress"><span class="progress-bar" data-width="90%"></span></div>
-      </div>
-      <div class="skill">
-        <h3>Odoo</h3>
-        <div class="progress"><span class="progress-bar" data-width="95%"></span></div>
-      </div>
-    </div>
-  </section>
+  <h2 class="section-title">Skills</h2>
+  <div class="skills-container">
+    <div class="skill-box" data-percent="95"><div class="charge-icon">⚡</div><div class="fill-box"></div><p class="skill-name">HTML</p></div>
+    <div class="skill-box" data-percent="90"><div class="charge-icon">⚡</div><div class="fill-box"></div><p class="skill-name">CSS</p></div>
+    <div class="skill-box" data-percent="85"><div class="charge-icon">⚡</div><div class="fill-box"></div><p class="skill-name">JavaScript</p></div>
+    <div class="skill-box" data-percent="90"><div class="charge-icon">⚡</div><div class="fill-box"></div><p class="skill-name">Python</p></div>
+    <div class="skill-box" data-percent="95"><div class="charge-icon">⚡</div><div class="fill-box"></div><p class="skill-name">Odoo</p></div>
+  </div>
+</section>
+
 
   <section id="portfolio" class="section">
   <h2 class="section-title">Portfolio</h2>
