--- a/index.html
+++ b/index.html
@@ -135,12 +135,53 @@
   <section id="skills" class="section">
   <h2 class="section-title">Skills</h2>
   <div class="skills-container">
-    <div class="skill-box" data-percent="95"><div class="charge-icon">⚡</div><div class="fill-box"></div><p class="skill-name">HTML</p></div>
-    <div class="skill-box" data-percent="90"><div class="charge-icon">⚡</div><div class="fill-box"></div><p class="skill-name">CSS</p></div>
-    <div class="skill-box" data-percent="85"><div class="charge-icon">⚡</div><div class="fill-box"></div><p class="skill-name">JavaScript</p></div>
-    <div class="skill-box" data-percent="90"><div class="charge-icon">⚡</div><div class="fill-box"></div><p class="skill-name">Python</p></div>
-    <div class="skill-box" data-percent="95"><div class="charge-icon">⚡</div><div class="fill-box"></div><p class="skill-name">Odoo</p></div>
+  <div class="skill-box" data-percent="95">
+    <div class="charge-icon">⚡<span class="percent-text">95%</span></div>
+    <div class="transparent-box"></div>
+    <p class="skill-name">HTML</p>
   </div>
+  <!-- Repeat for other skills -->
+</div>
+    <div class="skills-container">
+  <div class="skill-box" data-percent="95">
+    <div class="charge-icon">⚡<span class="percent-text">95%</span></div>
+    <div class="transparent-box"></div>
+    <p class="skill-name">HTML</p>
+  </div>
+  <!-- Repeat for other skills -->
+</div>
+    <div class="skills-container">
+  <div class="skill-box" data-percent="95">
+    <div class="charge-icon">⚡<span class="percent-text">95%</span></div>
+    <div class="transparent-box"></div>
+    <p class="skill-name">HTML</p>
+  </div>
+  <!-- Repeat for other skills -->
+</div>
+    <div class="skills-container">
+  <div class="skill-box" data-percent="95">
+    <div class="charge-icon">⚡<span class="percent-text">95%</span></div>
+    <div class="transparent-box"></div>
+    <p class="skill-name">HTML</p>
+  </div>
+  <!-- Repeat for other skills -->
+</div>
+    <div class="skills-container">
+  <div class="skill-box" data-percent="95">
+    <div class="charge-icon">⚡<span class="percent-text">95%</span></div>
+    <div class="transparent-box"></div>
+    <p class="skill-name">HTML</p>
+  </div>
+  <!-- Repeat for other skills -->
+</div>
+    <div class="skills-container">
+  <div class="skill-box" data-percent="95">
+    <div class="charge-icon">⚡<span class="percent-text">95%</span></div>
+    <div class="transparent-box"></div>
+    <p class="skill-name">HTML</p>
+  </div>
+  <!-- Repeat for other skills -->
+</div>
 </section>
 
 
