--- a/index.html
+++ b/index.html
@@ -135,54 +135,54 @@
   <section id="skills" class="section">
   <h2 class="section-title">Skills</h2>
   <div class="skills-container">
-  <div class="skill-box" data-percent="95">
-    <div class="charge-icon">⚡<span class="percent-text">95%</span></div>
-    <div class="transparent-box"></div>
-    <p class="skill-name">HTML</p>
+    <div class="skill-box" data-percent="95">
+      <div class="skill-visual">
+        <div class="skill-bar"></div>
+      </div>
+      <div class="skill-label">
+        <span class="skill-name">HTML</span>
+        <span class="skill-percent">95%</span>
+      </div>
+    </div>
+    <div class="skill-box" data-percent="90">
+      <div class="skill-visual">
+        <div class="skill-bar"></div>
+      </div>
+      <div class="skill-label">
+        <span class="skill-name">CSS</span>
+        <span class="skill-percent">90%</span>
+      </div>
+    </div>
+    <div class="skill-box" data-percent="85">
+      <div class="skill-visual">
+        <div class="skill-bar"></div>
+      </div>
+      <div class="skill-label">
+        <span class="skill-name">JavaScript</span>
+        <span class="skill-percent">85%</span>
+      </div>
+    </div>
+    <div class="skill-box" data-percent="90">
+      <div class="skill-visual">
+        <div class="skill-bar"></div>
+      </div>
+      <div class="skill-label">
+        <span class="skill-name">Python</span>
+        <span class="skill-percent">90%</span>
+      </div>
+    </div>
+    <div class="skill-box" data-percent="95">
+      <div class="skill-visual">
+        <div class="skill-bar"></div>
+      </div>
+      <div class="skill-label">
+        <span class="skill-name">Odoo</span>
+        <span class="skill-percent">95%</span>
+      </div>
+    </div>
   </div>
-  <!-- Repeat for other skills -->
-</div>
-    <div class="skills-container">
-  <div class="skill-box" data-percent="95">
-    <div class="charge-icon">⚡<span class="percent-text">95%</span></div>
-    <div class="transparent-box"></div>
-    <p class="skill-name">HTML</p>
-  </div>
-  <!-- Repeat for other skills -->
-</div>
-    <div class="skills-container">
-  <div class="skill-box" data-percent="95">
-    <div class="charge-icon">⚡<span class="percent-text">95%</span></div>
-    <div class="transparent-box"></div>
-    <p class="skill-name">HTML</p>
-  </div>
-  <!-- Repeat for other skills -->
-</div>
-    <div class="skills-container">
-  <div class="skill-box" data-percent="95">
-    <div class="charge-icon">⚡<span class="percent-text">95%</span></div>
-    <div class="transparent-box"></div>
-    <p class="skill-name">HTML</p>
-  </div>
-  <!-- Repeat for other skills -->
-</div>
-    <div class="skills-container">
-  <div class="skill-box" data-percent="95">
-    <div class="charge-icon">⚡<span class="percent-text">95%</span></div>
-    <div class="transparent-box"></div>
-    <p class="skill-name">HTML</p>
-  </div>
-  <!-- Repeat for other skills -->
-</div>
-    <div class="skills-container">
-  <div class="skill-box" data-percent="95">
-    <div class="charge-icon">⚡<span class="percent-text">95%</span></div>
-    <div class="transparent-box"></div>
-    <p class="skill-name">HTML</p>
-  </div>
-  <!-- Repeat for other skills -->
-</div>
 </section>
+
 
 
   <section id="portfolio" class="section">
