--- a/index.html
+++ b/index.html
@@ -134,54 +134,45 @@
   <!-- Skills -->
   <section id="skills" class="section">
   <h2 class="section-title">Skills</h2>
-  <div class="skills-container">
-    <div class="skill-box" data-percent="95">
-      <div class="skill-visual">
+  <div class="skills-chart">
+    <div class="skill-row" data-percent="95">
+      <span class="skill-name">HTML</span>
+      <div class="skill-bar-container">
         <div class="skill-bar"></div>
       </div>
-      <div class="skill-label">
-        <span class="skill-name">HTML</span>
-        <span class="skill-percent">95%</span>
-      </div>
+      <span class="skill-percent">95%</span>
     </div>
-    <div class="skill-box" data-percent="90">
-      <div class="skill-visual">
+    <div class="skill-row" data-percent="90">
+      <span class="skill-name">CSS</span>
+      <div class="skill-bar-container">
         <div class="skill-bar"></div>
       </div>
-      <div class="skill-label">
-        <span class="skill-name">CSS</span>
-        <span class="skill-percent">90%</span>
-      </div>
+      <span class="skill-percent">90%</span>
     </div>
-    <div class="skill-box" data-percent="85">
-      <div class="skill-visual">
+    <div class="skill-row" data-percent="85">
+      <span class="skill-name">JavaScript</span>
+      <div class="skill-bar-container">
         <div class="skill-bar"></div>
       </div>
-      <div class="skill-label">
-        <span class="skill-name">JavaScript</span>
-        <span class="skill-percent">85%</span>
-      </div>
+      <span class="skill-percent">85%</span>
     </div>
-    <div class="skill-box" data-percent="90">
-      <div class="skill-visual">
+    <div class="skill-row" data-percent="90">
+      <span class="skill-name">Python</span>
+      <div class="skill-bar-container">
         <div class="skill-bar"></div>
       </div>
-      <div class="skill-label">
-        <span class="skill-name">Python</span>
-        <span class="skill-percent">90%</span>
-      </div>
+      <span class="skill-percent">90%</span>
     </div>
-    <div class="skill-box" data-percent="95">
-      <div class="skill-visual">
+    <div class="skill-row" data-percent="95">
+      <span class="skill-name">Odoo</span>
+      <div class="skill-bar-container">
         <div class="skill-bar"></div>
       </div>
-      <div class="skill-label">
-        <span class="skill-name">Odoo</span>
-        <span class="skill-percent">95%</span>
-      </div>
+      <span class="skill-percent">95%</span>
     </div>
   </div>
 </section>
+
 
 
 
